2007-06-05  Wang Xin  <jedy.wang@sun.com>

	** Fixes #385354, Matthew Barnes updated the patch for trunk.
	Replace all __PRETTY_FUNCTION__ with G_GNUC_PRETTY_FUNCTION.

	* addressbook/e-book-backend-gal.c:
	* addressbook/e-book-backend-gal.h: Add LBER_USE_DER and
	LDAP_CONTROL_PAGEDRESULTS if sunldap is used.

2007-06-04  Srinivasa Ragavan  <sragavan@novell.com>

	** Evolution Exchange 2.11.3.1 release

	* configure.in:

2007-06-04  Srinivasa Ragavan  <sragavan@novell.com>

	** Evolution Exchange 2.11.3 release

	* NEWS:
	* configure.in:

2007-05-28  Veerapuram Varadhan  <vvaradhan@novell.com>

	** Fixes #406155

	* mail/mail-stub-exchange.c (free_folder(),
	message_remove_at_index(), process_flags ()): Guard access to
	changed_messages array with G_STATIC_REC_MUTEX locks.
		
2007-06-04  Veerapuram Varadhan  <vvaradhan@novell.com>

	* camel/camel-exchange-folder.c (camel_exchange_folder_construct):
	Do not fetch messages if folder summary is available.
	
2007-06-04  Srinivasa Ragavan  <sragavan@novell.com>

	** Add missing files.

	* addressbook/e-book-backend-db-cache.c: 
	* addressbook/e-book-backend-db-cache.h:

2007-05-28  Veerapuram Varadhan <vvaradhan@novell.com>

	* camel/camel-exchange-store.c (exchange_store_get_folder_info):
	* mail/mail-stub-exchange.c (get_folder_info):  Don't mask
	CAMEL_FOLDER_INFO_FAST with CAMEL_FOLDER_INFO_SUBSCRIBED and
	handle, CAMEL_FOLDER_INFO_FAST in stub.  FOLDER_INFO_FAST should
	fetch available folders - without a rescan.
	
2007-06-03  Srinivasa Ragavan  <sragavan@novell.com>

	* configure.in: Fix for picking evolution without version 
	specification in the installed files.

2007-06-01  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in: Fix an implicit function declaration in the
	LDAP Paged Control test program.

2007-06-01  Srinivasa Ragavan  <sragavan@novell.com>

	** Adds support for GAL Caching and summary. It uses libdb and makes it
	a soft dependency.

	* addressbook/Makefile.am: