@@ -1,3 +1,11 @@
+2007-06-09  Matthew Barnes  <mbarnes@redhat.com>
+
+	* mail/mail-stub-exchange.c:
+	* addressbook/e-book-backend-gal.c:
+	* addressbook/e-book-backend-db-cache.c:
+	* storage/exchange-autoconfig-wizard.c:
+	Fix new compiler warnings since 2.11.2 (#444101).
+
 2007-06-05  Wang Xin  <jedy.wang@sun.com>
 
 	** Fixes #385354, Matthew Barnes updated the patch for trunk.
